fix overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,6 +32,7 @@
 }
 
 body {
+	overflow-x: hidden;
 	background: var(--background);
 	color: var(--foreground);
 	font-family:
